# czid-workflows

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RunningCZIDWorkflowsOnARMMacs.md  SECURITY.md  \  changelog_new.txt  conftest.py  contigs.fasta  pyrightconfig.json  requirements-dev.txt  viz.md
workflows/index-generation/ncbi-compress/: 123.fa  Cargo.toml  README.md  check_sequence_retention.ipynb
workflows/index-generation/ncbi-compress/src/: bloomset.rs  commands.rs  fasta_tools.rs  lib.rs  logging.rs  main.rs  minhashtree.rs  minhashtree_w_logging.rs  ncbi_compress.rs  trie_store.rs  util.rs
workflows/index-generation/ncbi-compress/test_data/commands/common_truth_output/: nt_out.fa
workflows/index-generation/ncbi-compress/test_data/commands/fasta_compress_from_fasta_skip_split_by_taxid/truth-ouputs/: nt_out.fa
workflows/index-generation/ncbi-compress/test_data/commands/fasta_compress_from_taxid_dir/inputs/: 9646.fasta  9770.fasta  (+3 more)
workflows/index-generation/ncbi-compress/test_data/fasta_tools/inputs/: nt
workflows/index-generation/ncbi-compress/test_data/fasta_tools/truth_outputs/: nt.sorted
workflows/index-generation/ncbi-compress/tests/: integration_test.rs  tests.rs
workflows/index-generation/ncbi-compress/tests/test_data/accession2taxid/: nucl_gb.accession2taxid.subset  nucl_wgs.accession2taxid.subset  pdb.accession2taxid.subset
workflows/index-generation/ncbi-compress/tests/test_data/expected_split_accessions_by_taxid/: test_file_0_chkv.txt  test_file_0_streptococcus.txt
(+998 files in other folders)
