[package]
name = "ncbi-compress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.2.0"
chrono = "0.4.26"
clap = { version = "4.3.3", features = ["derive"] }
csv = "1.2.2"
env_logger = "0.10.0"
log = "0.4.19"
rayon = "1.7.0"
sourmash = "0.11.0"
